--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4" style="height:40px;">
+<mat-toolbar color="primary"  style="height:50px;">
   <span>
     <button mat-mini-fab (click)="sidenav?.toggle()" >
       <mat-icon>menu</mat-icon>
@@ -6,7 +6,7 @@
     <span class="logo">
       <img src="assets/logo.png" alt="Logo">
     </span>
-    <span class="title">
+    <span class="title" >
       {{ title }}
     </span>
   </span>
@@ -17,12 +17,12 @@
 </mat-toolbar>
 <mat-sidenav-container>
   <mat-sidenav #sidenav mode="side" opened class="app-sidenav">
-    <div><h3 align="left">{{username}}</h3></div>
+    <div class="mat-elevation-z4"><h3 style="padding-left:10%;" >{{username}}</h3></div>
     <nav>
       <a mat-button class="nav-link"
       *ngFor="let link of links"
       [routerLink]="link.path">
-      <mat-icon class="mat-18" padding-right="5px">{{link.icon}}</mat-icon>
+      <mat-icon class="mat-18" style="padding-right:20px;">{{link.icon}}</mat-icon>
       {{link.title}}
     </a>
     </nav>
