--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,1 +1,77 @@
-<p>clubs works!</p>
+<mat-toolbar style="height:38px;" class="toolbar2">
+    <div>
+        <span>Club View</span>
+    </div>
+    <div >
+        <mat-form-field  appearance="fill" >  <!-- legacy an outline are other directives of appearance-->
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search Club" #input>
+            <mat-icon matPostfix>search</mat-icon>
+        </mat-form-field>
+    </div>
+    <Div>
+        
+        <button mat-icon-button [matMenuTriggerFor]="menu" >
+            <mat-icon>filter_list</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+        </mat-menu>
+        <button mat-icon-button [matMenuTriggerFor]="menu" >
+            <mat-icon>print</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>PDF</button>
+            <button mat-menu-item>EXCEL</button>
+        </mat-menu>
+        <button mat-icon-button [matMenuTriggerFor]="menu" >
+            <mat-icon>app_registration</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+        </mat-menu>
+    </Div>
+</mat-toolbar>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+  
+      <!-- Progress Column -->
+      <ng-container matColumnDef="progress">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
+        <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+  
+      <!-- Color Column -->
+      <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Color </th>
+        <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+  </div>
+  
