Addd the club form and Club view

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,18 +78,6 @@ mat-card:not(.dashboard-card) {
   width: 100%;
 }
 
-.courses-containers {
-  display: flex;
-  justify-content: space-around;
-
-  .courses-list {
-    width: 49%;
-  }
-
-  .course-details {
-    width: 49%;
-  }
-}
 
 .login-container {
   display: flex;
@@ -369,3 +357,6 @@ mat-toolbar {
     }
   }
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
