--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -10,7 +10,7 @@
     </div>
     <Div>
         
-        <button mat-icon-button [matMenuTriggerFor]="menu" >
+        <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter clubs">
             <mat-icon>filter_list</mat-icon>
             
         </button>
@@ -18,7 +18,7 @@
             <button mat-menu-item>Item 1</button>
             <button mat-menu-item>Item 2</button>
         </mat-menu>
-        <button mat-icon-button [matMenuTriggerFor]="menu" >
+        <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Print the Page">
             <mat-icon>print</mat-icon>
             
         </button>
@@ -26,18 +26,14 @@
             <button mat-menu-item>PDF</button>
             <button mat-menu-item>EXCEL</button>
         </mat-menu>
-        <button mat-icon-button [matMenuTriggerFor]="menu" >
-            <mat-icon>app_registration</mat-icon>
-            
+        <button mat-icon-button matTooltip="Add new Club" (click)="registerClub()">
+            <mat-icon>app_registration</mat-icon>  
         </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu>
+        
     </Div>
 </mat-toolbar>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table [dataSource]="dataSource" matSort class="table">
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
@@ -54,7 +50,7 @@
       <!-- Facility Column -->
       <ng-container matColumnDef="facility">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Facility </th>
-        <td mat-cell *matCellDef="let row"> {{row.facility}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.health_facility}} </td>
       </ng-container>
   
       <!-- Zone Column -->
@@ -101,7 +97,7 @@
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedClub(row.id)"></tr>
   
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
