--- a/src/styles.scss
+++ b/src/styles.scss
@@ -358,5 +358,5 @@ mat-toolbar {
   }
 }
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+// /* Importing Bootstrap SCSS file. */     uncommenting this affects the behaviour of my workspace
+// @import '~bootstrap/scss/bootstrap';
