--- a/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
+++ b/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
@@ -20,6 +20,6 @@
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Edit</button>
+    <button mat-button matTooltip="Edit Leadership Board">Edit</button>
   </mat-card-actions>
 </mat-card>
