--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -1,1 +1,99 @@
-<p>staff works!</p>
+<mat-toolbar style="height:38px;" class="toolbar2">
+    <div>
+        <span>Staff View</span>
+    </div>
+    <div >
+        <mat-form-field  appearance="fill" >  <!-- legacy and outline are other directives of appearance-->
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search Member" #input>
+            <mat-icon matPostfix>search</mat-icon>
+        </mat-form-field>
+    </div>
+    <Div>
+        
+        <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter Members">
+            <mat-icon>filter_list</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+        </mat-menu>
+        <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Print Page">
+            <mat-icon>print</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>PDF</button>
+            <button mat-menu-item>EXCEL</button>
+        </mat-menu>
+        <button mat-icon-button matTooltip="Add Staff" (click)="registerStaff()">
+            <mat-icon>app_registration</mat-icon>  
+        </button>
+        
+    </Div>
+</mat-toolbar>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class="table">
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="first_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.first_name}} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="middle_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Middle Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.middle_name}} </td>
+      </ng-container>
+  
+      <!-- NAme Column -->
+      <ng-container matColumnDef="last_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.last_name}} </td>
+      </ng-container>
+
+      <!-- Tel Column -->
+      <ng-container matColumnDef="tel">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone </th>
+        <td mat-cell *matCellDef="let row"> {{row.tel}} </td>
+      </ng-container>
+
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
+        <td mat-cell *matCellDef="let row"> {{row.position}} </td>
+      </ng-container>
+
+      <!--Status Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
+        <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+      </ng-container>
+
+
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedStaff(row.id)"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+  </div>
+  
