--- a/src/app/staff/staffform/staffform.component.html
+++ b/src/app/staff/staffform/staffform.component.html
@@ -1,8 +1,8 @@
 <mat-card>
-  <form class="memberRegForm" [formGroup] = "registrationForm" (ngSubmit)="onSubmit()">
+  <form class="staffRegForm" [formGroup] = "registrationForm" (ngSubmit)="onSubmit()">
     <mat-card-header>
-        <mat-card-title>Member Registration Form</mat-card-title>
-        <mat-card-subtitle>Register a new member with this form</mat-card-subtitle>
+        <mat-card-title>Staff Registration Form</mat-card-title>
+        <mat-card-subtitle>Register a new staff with this form</mat-card-subtitle>
     </mat-card-header>
     
     <mat-card-content>
@@ -43,9 +43,9 @@
       </mat-form-field>
 
       <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label> Role</mat-label>
-        <input matInput formControlName = "role">
-        <mat-error *ngIf="registrationForm.get('role').hasError('required')"> Role is required </mat-error>
+        <mat-label>Position</mat-label>
+        <input matInput formControlName = "position">
+        <mat-error *ngIf="registrationForm.get('position').hasError('required')"> Position is required </mat-error>
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field>
 
@@ -55,15 +55,7 @@
         <mat-error *ngIf="registrationForm.get('status').hasError('required')"> Status is required </mat-error>
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field>
-
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Club</mat-label>
-        <input matInput formControlName = "club">
-        <mat-error *ngIf="registrationForm.get('club').hasError('required')"> Status is required </mat-error>
-        <mat-icon matSuffix>person</mat-icon>
-      </mat-form-field>
-
-      
+    
       </mat-card-content>
       <mat-card-actions align="start">
           <button [disabled]="registrationForm.invalid" type="submit" mat-button color="primary">Submit</button>
