Added content to the Home screen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<div class="welcome">
+    <div class="welcome-head">
+        <h2>
+            Welcome to MKUTA INFORMATION MANAGEMENT SYSTEM (MIMS)
+        </h2>
+    </div >
+    <div class="welcome-content">  
+        <h3>
+            <ul>
+                <li>Press Activities to view, add or edit the conducted activities</li>
+                <li>Press Clubs to View the Registered clubs</li>
+                <li>Press Clients to view, add or edit the clients involved in Different Activities</li>
+                <li>Press Members to view, add or edit the Registed members in the system</li>
+                <li>Press Staff to view, add or edit the Staffs in the system</li>
+            </ul>
+        </h3>
+    </div>
+</div>
