--- a/src/app/staff/selectedstaff/selectedstaff.component.html
+++ b/src/app/staff/selectedstaff/selectedstaff.component.html
@@ -16,7 +16,7 @@
                     <span>Last Name: {{staffData?.last_name}}</span>
                 </div>
                 <div>
-                    <span>Club Name: {{staffData?.club}}</span>
+                    <span>Position: {{staffData?.position}}</span>
                 </div>
                 <div>
                     <span>Date joined: {{staffData?.date_joined}}</span>
