Rectifies the forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
     <mat-icon>person</mat-icon>
   </button>
 </mat-toolbar>
-<mat-sidenav-container>
-  <mat-sidenav #sidenav mode="side" opened class="app-sidenav">
+<mat-sidenav-container >
+  <mat-sidenav #sidenav mode="side" opened class="app-sidenav" class="hide-on-small-screens">
     <div class="mat-elevation-z4"><h3 style="padding-left:10%;" >{{username}}</h3></div>
     <nav>
       <a mat-button class="nav-link"
