--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <h3>
             <ul>
                 <li>Press Activities to view, add or edit the conducted activities</li>
-                <li>Press Clubs to View the Registered clubs</li>
+                <li>Press Clubs to view, add or edit the Registered clubs</li>
                 <li>Press Clients to view, add or edit the clients involved in Different Activities</li>
                 <li>Press Members to view, add or edit the Registed members in the system</li>
                 <li>Press Staff to view, add or edit the Staffs in the system</li>
