--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -11,36 +11,35 @@
     <Div>
         
         <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter Members">
-            <mat-icon>filter_list</mat-icon>
+            <mat-icon color="accent">filter_list</mat-icon>
             
         </button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item>Item 1</button>
             <button mat-menu-item>Item 2</button>
         </mat-menu>
-        <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Print Page">
-            <mat-icon>print</mat-icon>
-            
+
+        <button mat-button (click)="exporter.exportTable('xlsx')" matTooltip="Export to Excel">
+          <mat-icon color="accent">download</mat-icon>
         </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>PDF</button>
-            <button mat-menu-item>EXCEL</button>
-        </mat-menu>
+
         <button mat-icon-button matTooltip="Add Member" (click)="registerMember()">
-            <mat-icon>app_registration</mat-icon>  
+            <mat-icon color="accent">app_registration</mat-icon>  
         </button>
         
     </Div>
 </mat-toolbar>
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort class="table">
+    <table mat-table matTableExporter [dataSource]="dataSource" matSort class="table" #exporter="matTableExporter">
   
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Num. </th>
+        <td mat-cell *matCellDef="let i = index">
+          {{this.paginator.pageIndex == 0 ? i + 1 : 1 + i + this.paginator.pageIndex * this.paginator.pageSize}}
+        </td>
       </ng-container>
-  
+        
       <!-- Name Column -->
       <ng-container matColumnDef="first_name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
