--- a/src/app/staff/staff.component.scss
+++ b/src/app/staff/staff.component.scss
@@ -1,7 +1,7 @@
 .toolbar2{
     justify-content: space-between;
+    display: flex;
 }
-
 
 
 .mat-table {
@@ -12,7 +12,7 @@
   }
 
 .mat-form-field {
-font-size: 14px;
+// font-size: 14px;
 width: 100%;
 }
 
