--- a/src/app/staff/staffform/staffform.component.html
+++ b/src/app/staff/staffform/staffform.component.html
@@ -49,10 +49,13 @@
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
+      <mat-form-field appearance="fill">
         <mat-label>Status</mat-label>
-        <input matInput formControlName = "status">
-        <mat-error *ngIf="registrationForm.get('status').hasError('required')"> Status is required </mat-error>
+        <mat-select formControlName="status" required>
+          <mat-option value="Active">Active</mat-option>
+          <mat-option value="Domant">Domant</mat-option>
+          <mat-option value="Dead">Dead</mat-option>
+        </mat-select>
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field>
     
