--- a/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
+++ b/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
@@ -69,4 +69,8 @@
             </div>
 
         </mat-card-content>
+        
+        <mat-card-actions align="start">
+            <button mat-button >Edit</button>   
+        </mat-card-actions>
         </mat-card>
