added the form update methods to clubs and members

--- a/src/app/clubs/selectedclub/selectedclub.component.html
+++ b/src/app/clubs/selectedclub/selectedclub.component.html
@@ -2,7 +2,8 @@
     <section class="column">
         <div class="row1">
             <app-clubdetails [supervisorData]="supervisorData"
-            [clubData]="clubData" >
+            [clubData]="clubData"
+            (editClub)=editClub($event) >
             </app-clubdetails>
             
         </div>
