--- a/src/app/clubs/clubform/clubform.component.html
+++ b/src/app/clubs/clubform/clubform.component.html
@@ -1,10 +1,11 @@
+    
+<alert></alert>
 <mat-card>
   <form class="clubRegForm" [formGroup] = "registrationForm" (ngSubmit)="onSubmit()">
     <mat-card-header>
         <mat-card-title>Club Registration Form</mat-card-title>
         <mat-card-subtitle>Register a new club with this form</mat-card-subtitle>
     </mat-card-header>
-    
     <mat-card-content>
        
     
