--- a/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
+++ b/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
@@ -71,6 +71,6 @@
         </mat-card-content>
         
         <mat-card-actions align="start">
-            <button mat-button >Edit</button>   
+            <button mat-button (click)="editClub.emit(clubData.id)">Edit</button>   
         </mat-card-actions>
         </mat-card>
