--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -45,7 +45,6 @@
         </div>
     </mat-card-content>
     <mat-card-actions align="start">
-        <button mat-button >Edit</button>
-        
+        <button mat-button (click)="editMember.emit(memberData.id)" >Edit</button>      
     </mat-card-actions>
 </mat-card>
