--- a/src/app/members/members.component.scss
+++ b/src/app/members/members.component.scss
@@ -1,20 +1,17 @@
-.toolbar2{
-    justify-content: space-between;
+mat-toolbar{
+  justify-content: space-between;
+  font-weight: normal;
+  font-size: medium;
+  height: 45px;
+  padding:0px ;
 }
 
-
-
-.mat-table {
+mat-table {
     width: 100%;
     margin: 5px;
     padding-right: 1rem;
     
   }
-
-.mat-form-field {
-font-size: 14px;
-width: 100%;
-}
 
 td, th {
 width: 25%;
@@ -24,3 +21,11 @@ width: 25%;
     background: whitesmoke;
     cursor: pointer;
   }
+
+
+::ng-deep .small-input.mat-form-field-appearance-outline .mat-form-field-infix {
+  padding: .25em 0 .75em 0;
+  font-size: 12px;
+}
+::ng-deep .small-input.mat-form-field-appearance-outline .mat-form-field-infix .mat-select-arrow{margin-top: 10px;}
+::ng-deep .small-input.mat-form-field-appearance-outline .mat-select-empty + .mat-form-field-label-wrapper .mat-form-field-label{margin-top: -0.75em;}
