--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar color="primary"  style="height:50px;">
+<mat-toolbar color="primary"  style="height:50px;" *ngIf="user">
   <span>
-    <button mat-mini-fab (click)="sidenav?.toggle()" >
+    <!-- <button mat-mini-fab (click)="sidenav?.toggle()" >
       <mat-icon>menu</mat-icon>
-    </button>
+    </button> -->
     <span class="logo">
       <img src="assets/logo.png" alt="Logo">
     </span>
@@ -11,12 +11,12 @@
     </span>
   </span>
   <span class="spacer"></span>
-  <button class="login" mat-mini-fab>
-    <mat-icon>person</mat-icon>
+  <button class="login" mat-mini-fab (click)="logout()">
+    <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
-<mat-sidenav-container >
-  <mat-sidenav #sidenav mode="side" opened class="app-sidenav" class="hide-on-small-screens">
+<mat-sidenav-container  >
+  <mat-sidenav #sidenav mode="side" opened class="app-sidenav" class="hide-on-small-screens" *ngIf="user">>
     <div class="mat-elevation-z4"><h3 style="padding-left:10%;" >{{username}}</h3></div>
     <nav>
       <a mat-button class="nav-link"
