--- a/src/app/staff/selectedstaff/selectedstaff.component.html
+++ b/src/app/staff/selectedstaff/selectedstaff.component.html
@@ -39,7 +39,7 @@
         </div>
     </mat-card-content>
     <mat-card-actions align="start">
-        <button mat-button >Edit</button>
+        <button mat-button (click)="editStaff(staffData.id)">Edit</button>
         
     </mat-card-actions>
 </mat-card>
