--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar color="primary"  style="height:50px;" *ngIf="user">
   <span>
-    <!-- <button mat-mini-fab (click)="sidenav?.toggle()" >
+    <button mat-mini-fab (click)="toggle()" >
       <mat-icon>menu</mat-icon>
-    </button> -->
+    </button>
     <span class="logo">
       <img src="assets/logo.png" alt="Logo">
     </span>
-    <span class="title" >
+    <span class="title">
       {{ title }}
     </span>
   </span>
@@ -15,9 +15,9 @@
     <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
-<mat-sidenav-container  >
-  <mat-sidenav #sidenav mode="side" opened class="app-sidenav" class="hide-on-small-screens" *ngIf="user">>
-    <div class="mat-elevation-z4"><h3 style="padding-left:10%;" >{{username}}</h3></div>
+<mat-sidenav-container >
+  <mat-sidenav #sidenav1 mode="side"  [opened]="isShowing" class="app-sidenav" class="hide-on-small-screens" *ngIf="user">
+    <div class="mat-elevation-z4"><h3 style="padding-left:10%;">{{username}}</h3></div>
     <nav>
       <a mat-button class="nav-link"
       *ngFor="let link of links"
