--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,21 @@
-<div class="welcome">
-    <div class="welcome-head">
-        <h2>
-            Welcome to MKUTA INFORMATION MANAGEMENT SYSTEM (MIMS)
-        </h2>
-    </div >
-    <div class="welcome-content">  
-        <h3>
-            <ul>
-                <li>Press Activities to view, add or edit the conducted activities</li>
-                <li>Press Clubs to view, add or edit the Registered clubs</li>
-                <li>Press Clients to view, add or edit the clients involved in Different Activities</li>
-                <li>Press Members to view, add or edit the Registed members in the system</li>
-                <li>Press Staff to view, add or edit the Staffs in the system</li>
-            </ul>
-        </h3>
-    </div>
+<div>
+    <mat-form-field appearance="fill">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      
+        <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+      </mat-form-field>
+      
+      <p>Selected range: {{range.value | json}}</p>
+</div>
+
+<div class="graphs">
+  <div echarts [options]="chartOption" [merge]= "dynamicData" class="demo-chart"></div>
+  <div echarts [options]="chartOption2" [merge]= "dynamicData" class="demo-chart"></div>
 </div>
