--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,13 @@
+.datePicker{
+ justify-content: center;
+ padding-top: 5vh;
+ text-align: center;
+}
+mat-form-field{
+    width: 15%;
+    padding-right: 5vh;
+}
+
 
 .demo-chart{
     width: 50%;
