--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary"  style="height:50px;" *ngIf="user">
   <span>
-    <button mat-mini-fab (click)="toggle()" >
+    <button mat-mini-fab (click)="toggle()" *ngIf="isAdmin">
       <mat-icon>menu</mat-icon>
     </button>
     <span class="logo">
@@ -11,6 +11,9 @@
     </span>
   </span>
   <span class="spacer"></span>
+  <button class="login" mat-mini-fab (click)="help()">
+    <mat-icon>help</mat-icon>
+  </button>
   <button class="login" mat-mini-fab (click)="logout()">
     <mat-icon>logout</mat-icon>
   </button>
@@ -19,12 +22,30 @@
   <mat-sidenav #sidenav1 mode="side"  [opened]="isShowing" class="app-sidenav" class="hide-on-small-screens" *ngIf="user">
     <div class="mat-elevation-z4"><h3 style="padding-left:10%;">{{username}}</h3></div>
     <nav>
-      <a mat-button class="nav-link"
-      *ngFor="let link of links"
-      [routerLink]="link.path">
-      <mat-icon class="mat-18" style="padding-right:20px;">{{link.icon}}</mat-icon>
-      {{link.title}}
-    </a>
+      <a mat-button class="nav-link" routerLink="/home">
+        <mat-icon class="mat-18" style="padding-right:20px;">home</mat-icon>
+        Home
+      </a>
+      <a mat-button class="nav-link" routerLink="/activities" *ngIf="isAdmin">
+        <mat-icon class="mat-18" style="padding-right:20px;">local_activity</mat-icon>
+        Activities
+      </a>
+      <a mat-button class="nav-link" routerLink="/clubs">
+        <mat-icon class="mat-18" style="padding-right:20px;">house_siding</mat-icon>
+        Clubs
+      </a>
+      <a mat-button class="nav-link" routerLink="/clients">
+        <mat-icon class="mat-18" style="padding-right:20px;">people</mat-icon>
+        Clients
+      </a>
+      <a mat-button class="nav-link" routerLink="/members">
+        <mat-icon class="mat-18" style="padding-right:20px;">people</mat-icon>
+        Members
+      </a>
+      <a mat-button class="nav-link" routerLink="/staffs">
+        <mat-icon class="mat-18" style="padding-right:20px;">people_outline</mat-icon>
+        Staffs
+      </a>
     </nav>
   </mat-sidenav>
 
