--- a/src/app/clubs/selectedclub/clubmembers/clubmembers.component.html
+++ b/src/app/clubs/selectedclub/clubmembers/clubmembers.component.html
@@ -3,6 +3,9 @@
             <mat-card-title>
             Club Members
             </mat-card-title>
+            <button mat-icon-button color="accent" (click)="registerMember()">
+              <mat-icon>add_circle_outline</mat-icon>
+            </button>
         </mat-card-header>
         <mat-card-content>
            <cdk-virtual-scroll-viewport coreTableVirtualScroll itemSize="10">
