Added the notification and message icons

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ p {
 
 .mat-card-header-text {
   margin-left: 0;
-  border-bottom: 1px solid #ffd740;
+  border-bottom: 1px solid #b9e05c;
 }
 
 .header {
