--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary"  style="height:50px;" *ngIf="user">
   <span>
-    <button mat-mini-fab (click)="toggle()" *ngIf="isAdmin">
+    <button mat-mini-fab (click)="toggle()" color="primary">
       <mat-icon>menu</mat-icon>
     </button>
     <span class="logo">
@@ -11,18 +11,56 @@
     </span>
   </span>
   <span class="spacer"></span>
-  <button class="login" mat-mini-fab (click)="help()">
+  <button class="login" mat-mini-fab (click)="help()" color="primary" matBadge="1" matBadgeColor="warn">
+    <mat-icon color="white">message</mat-icon>
+  </button>
+  <button class="login" mat-mini-fab (click)="help()" [matMenuTriggerFor]="menu" matBadge="3" matBadgeColor="warn" color="primary">
+    <mat-icon>notifications</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>person</mat-icon>
+      <span>Viongozi wote mnakumbushwa kuwasilisha report ya mwezi wa kumi</span>
+    </button>
+
+    <button mat-menu-item>
+      <mat-icon>room</mat-icon>
+      <span>TB conference ya Mwanza</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>event</mat-icon>
+      <span>Upcoming Training Dar es salaam</span>
+    </button>
+  </mat-menu>
+  <button class="login" mat-mini-fab (click)="help()" color="primary">
     <mat-icon>help</mat-icon>
   </button>
-  <button class="login" mat-mini-fab (click)="logout()">
-    <mat-icon>logout</mat-icon>
+  <button class="login" mat-mini-fab  [matMenuTriggerFor]="account" color="primary">
+    <mat-icon>person</mat-icon>
   </button>
+    <mat-menu #account="matMenu">
+      <mat-card>
+  
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>{{username}}</mat-card-title>
+            
+        </mat-card-header>
+          <div style="text-align: center; color:#b9e05c;">My MIMS Account</div>
+        <mat-card-content>
+         
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button  (click)="logout()">Logout</button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-menu>
 </mat-toolbar>
 <mat-sidenav-container >
   <mat-sidenav #sidenav1 mode="side"  [opened]="isShowing" class="app-sidenav" class="hide-on-small-screens" *ngIf="user">
     <div class="mat-elevation-z4"><h3 style="padding-left:10%;">{{username}}</h3></div>
     <nav>
-      <a mat-button class="nav-link" routerLink="/home">
+      <a mat-button class="nav-link" routerLink="/home" *ngIf="isAdmin" >
         <mat-icon class="mat-18" style="padding-right:20px;">home</mat-icon>
         Home
       </a>
@@ -30,21 +68,34 @@
         <mat-icon class="mat-18" style="padding-right:20px;">local_activity</mat-icon>
         Activities
       </a>
-      <a mat-button class="nav-link" routerLink="/clubs">
+      <a mat-button class="nav-link" routerLink="/clubs" *ngIf="isAdmin">
         <mat-icon class="mat-18" style="padding-right:20px;">house_siding</mat-icon>
         Clubs
       </a>
-      <a mat-button class="nav-link" routerLink="/clients">
+      <!-- <a mat-button class="nav-link" routerLink="/clients">
         <mat-icon class="mat-18" style="padding-right:20px;">people</mat-icon>
         Clients
-      </a>
-      <a mat-button class="nav-link" routerLink="/members">
+      </a> -->
+      <a mat-button class="nav-link" routerLink="/members" *ngIf="isAdmin">
         <mat-icon class="mat-18" style="padding-right:20px;">people</mat-icon>
         Members
       </a>
-      <a mat-button class="nav-link" routerLink="/staffs">
+      <a mat-button class="nav-link" routerLink="/staffs" *ngIf="isAdmin">
         <mat-icon class="mat-18" style="padding-right:20px;">people_outline</mat-icon>
         Staffs
+      </a>
+        <!-- member begin here -->
+      <a mat-button class="nav-link" routerLink="/home" *ngIf="isMember" >
+        <mat-icon class="mat-18" style="padding-right:20px;" >home</mat-icon>
+        Home
+      </a>
+      <a mat-button class="nav-link" routerLink="" *ngIf="isMember" >
+        <mat-icon class="mat-18" style="padding-right:20px;" >payments</mat-icon>
+        Payments
+      </a>
+      <a mat-button class="nav-link" routerLink="">
+        <mat-icon class="mat-18" style="padding-right:20px;" >person</mat-icon>
+        Leadership
       </a>
     </nav>
   </mat-sidenav>
