--- a/src/app/clubs/selectedclub/clubmembers/clubmembers.component.html
+++ b/src/app/clubs/selectedclub/clubmembers/clubmembers.component.html
@@ -3,7 +3,7 @@
             <mat-card-title>
             Club Members
             </mat-card-title>
-            <button mat-icon-button color="accent" (click)="registerMember()">
+            <button mat-icon-button color="primary" (click)="registerMember()">
               <mat-icon>add_circle_outline</mat-icon>
             </button>
         </mat-card-header>
