--- a/src/app/clubs/selectedclub/clubleaders/clubleaders.component.scss
+++ b/src/app/clubs/selectedclub/clubleaders/clubleaders.component.scss
@@ -1,4 +1,4 @@
 .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-image: url('src/assets/img/avatar.JPG');
     background-size: cover;
   }
