Added the project logic

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class='datePicker'  [formGroup]="pickerGroup">
+<!-- <div class='datePicker'  [formGroup]="pickerGroup">
   <mat-form-field class="picker" appearance='fill'>
     <mat-label>Start Date</mat-label>
     <input matInput [matDatepicker]="picker" placeholder="Choose Start date" formControlName = "start">
@@ -17,4 +17,24 @@
 <div class="graphs">
   <div echarts [options]="chartOption" [merge]= "dynamicData" class="demo-chart"></div>
   <div echarts [options]="chartOption2" [merge]= "dynamicData1" class="demo-chart-2"></div>
-</div>
+</div> -->
+
+
+<div class="welcome">
+  <div class="welcome-head">
+      <h2>
+          Welcome to MKUTA NETWORKS INFORMATION MANAGEMENT SYSTEM (MIMS)
+      </h2>
+  </div >
+  <div class="welcome-content">  
+      <h3>
+          <ul>
+              <li>Press Projects to view, add or edit Projects</li>
+              <li>Press Clubs to View the Registered clubs</li>
+              <li>Press Clients to view, add or edit the clients involved in Different Activities</li>
+              <li>Press Members to view, add or edit the Registed members in the system</li>
+              <li>Press Staff to view, add or edit the Staffs in the system</li>
+          </ul>
+      </h3>
+  </div>
+</div> 
