--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -18,3 +18,19 @@ mat-form-field{
     width: 50%;
     float: right;
 }
+
+
+
+.welcome-head{
+    display: flex;
+    justify-content:space-evenly;
+}
+
+.welcome-content{
+    display: flex;
+    justify-content:space-evenly;
+}
+
+.welcome{
+    padding-top: 10%;
+}
