--- a/src/app/members/selectedmember/memberactivities/memberactivities.component.html
+++ b/src/app/members/selectedmember/memberactivities/memberactivities.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>Recent Activities Performed</mat-card-title>
+        <mat-card-title>Projects Engaged </mat-card-title>
     </mat-card-header>
     <!-- <img matCardImage src="Card wide image source"> -->
     <mat-card-content>
