--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,5 +1,84 @@
-<p>On Develoment</p>
-<!-- <div class='tableauPlaceholder' id='viz1623845767015' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;HI&#47;HIVAIDSPrevalenceAmongTanzaniaFemales2004-2012&#47;MapofHIVAIDSPrevalenceAmongTanzaniaFemales2004and2012&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;HIVAIDSPrevalenceAmongTanzaniaFemales2004-2012&#47;MapofHIVAIDSPrevalenceAmongTanzaniaFemales2004and2012?:language=en-US&amp;:embed=true' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;HI&#47;HIVAIDSPrevalenceAmongTanzaniaFemales2004-2012&#47;MapofHIVAIDSPrevalenceAmongTanzaniaFemales2004and2012&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1623845767015');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<mat-toolbar>
+    <div>
+        <span>Projects</span>
+    </div>
+    <div >
+        <mat-form-field  appearance="outline" >  <!-- legacy and outline are other directives of appearance-->
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search Project" #input>
+            <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
+    </div>
+    <Div>
+        
+        <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter Projet">
+            <mat-icon color="accent">filter_list</mat-icon>
+            
+        </button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>Item 1</button>
+            <button mat-menu-item>Item 2</button>
+        </mat-menu>
+        <button mat-button (click)="exporter.exportTable('xlsx')">
+          <mat-icon color="accent">download</mat-icon>
+        </button>
 
-<ngx-tableau
-    tableauVizUrl= "https://public.tableau.com/views/Book1_16238665754970/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link"></ngx-tableau> -->
+        <button mat-icon-button matTooltip="Add new Project" (click)="registerProject()">
+            <mat-icon color="accent">app_registration</mat-icon>  
+        </button>
+        
+    </Div>
+</mat-toolbar>
+<div class="mat-elevation-z8">
+    <table mat-table matTableExporter [dataSource]="dataSource" matSort class="table" #exporter="matTableExporter">
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Num. </th>
+        <td mat-cell *matCellDef="let i = index">
+          {{this.paginator.pageIndex == 0 ? i + 1 : 1 + i + this.paginator.pageIndex * this.paginator.pageSize}}
+        </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+  
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
+        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+      </ng-container>
+  
+      <!-- start_date Column -->
+      <ng-container matColumnDef="start_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+        <td mat-cell *matCellDef="let row"> {{row.start_date}} </td>
+      </ng-container>
+  
+      <!-- end_date Column -->
+      <ng-container matColumnDef="end_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+        <td mat-cell *matCellDef="let row"> {{row.end_date}} </td>
+      </ng-container>
+
+     
+     
+
+      
+
+      
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedProject(row.id)"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+  </div>
+  
