--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="sub-details">
-                <img matCardImage  alt="Photo of a Shiba Inu">
+                <img matCardImage  alt="Photo">
             </div>
         </div>
     </mat-card-content>
