--- a/src/app/clubs/clubform/clubform.component.html
+++ b/src/app/clubs/clubform/clubform.component.html
@@ -79,7 +79,7 @@
         </tr>
        <tr>
         <td><mat-form-field class="fieldCss" appearance="fill">
-          <mat-label>Sub-District</mat-label>
+          <mat-label>CSO</mat-label>
           <input matInput placeholder="Ex. Kinondoni" formControlName="sub_district">
         </mat-form-field></td>
           <td><mat-form-field class="fieldCss" appearance="fill">
