--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,84 +1,92 @@
-<mat-toolbar>
-    <div>
+<!-- <div>
         <span>Projects</span>
-    </div>
-    <div >
-        <mat-form-field  appearance="outline" >  <!-- legacy and outline are other directives of appearance-->
-            <input matInput (keyup)="applyFilter($event)" placeholder="Search Project" #input>
-            <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
-    </div>
-    <Div>
-        
-        <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter Projet">
-            <mat-icon color="accent">filter_list</mat-icon>
-            
-        </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu>
-        <button mat-button (click)="exporter.exportTable('xlsx')">
-          <mat-icon color="accent">download</mat-icon>
-        </button>
-
-        <button mat-icon-button matTooltip="Add new Project" (click)="registerProject()">
-            <mat-icon color="accent">app_registration</mat-icon>  
-        </button>
-        
-    </Div>
-</mat-toolbar>
-<div class="mat-elevation-z8">
-    <table mat-table matTableExporter [dataSource]="dataSource" matSort class="table" #exporter="matTableExporter">
-  
-      <!-- ID Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Num. </th>
-        <td mat-cell *matCellDef="let i = index">
-          {{this.paginator.pageIndex == 0 ? i + 1 : 1 + i + this.paginator.pageIndex * this.paginator.pageSize}}
-        </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
-  
-      <!-- Description Column -->
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
-        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
-      </ng-container>
-  
-      <!-- start_date Column -->
-      <ng-container matColumnDef="start_date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-        <td mat-cell *matCellDef="let row"> {{row.start_date}} </td>
-      </ng-container>
-  
-      <!-- end_date Column -->
-      <ng-container matColumnDef="end_date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-        <td mat-cell *matCellDef="let row"> {{row.end_date}} </td>
-      </ng-container>
-
-     
-     
-
-      
-
-      
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedProject(row.id)"></tr>
-  
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+    </div> -->
+<div class="header">
+  <div>
+    <h1>Projects</h1>
   </div>
-  
+  <div class="custom-button" (click)="registerProject()">
+    Add Project +
+  </div>
+</div>
+<!-- project search -->
+<div class="project-search">
+  <mat-icon matSuffix class="search-icon">search</mat-icon>
+  <mat-form-field appearance="fill">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search projects by name, description, date, zone or region" #input>
+  </mat-form-field>
+  <div class="filters">
+    <div>Filter</div>
+    <mat-icon class="filter-icon" color="accent">filter_list</mat-icon>
+  </div>
+  <div class="download" (click)="exporter.exportTable('xlsx')">
+    <div>Download</div>
+    <mat-icon class="filter-icon" color="accent">download</mat-icon>
+  </div>
+</div>
+<!-- <div>
+
+  <button mat-icon-button [matMenuTriggerFor]="menu" matTooltip="Filter Projet">
+    <mat-icon color="accent">filter_list</mat-icon>
+
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>Item 1</button>
+    <button mat-menu-item>Item 2</button>
+  </mat-menu>
+  <button mat-button (click)="exporter.exportTable('xlsx')">
+    <mat-icon color="accent">download</mat-icon>
+  </button>
+
+  <button mat-icon-button matTooltip="Add new Project" (click)="registerProject()">
+    <mat-icon color="accent">app_registration</mat-icon>
+  </button>
+
+</div> -->
+
+<div class="table">
+  <table mat-table matTableExporter [dataSource]="dataSource" matSort class="table" #exporter="matTableExporter">
+
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Num. </th>
+      <td mat-cell *matCellDef="let i = index">
+        {{this.paginator.pageIndex == 0 ? i + 1 : 1 + i + this.paginator.pageIndex * this.paginator.pageSize}}
+      </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
+
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
+      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+    </ng-container>
+
+    <!-- start_date Column -->
+    <ng-container matColumnDef="start_date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+      <td mat-cell *matCellDef="let row"> {{row.start_date}} </td>
+    </ng-container>
+
+    <!-- end_date Column -->
+    <ng-container matColumnDef="end_date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+      <td mat-cell *matCellDef="let row"> {{row.end_date}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedProject(row.id)"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+</div>
