--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,36 +1,189 @@
-.datePicker{
- justify-content: center;
- padding-top: 5vh;
- text-align: center;
-}
-mat-form-field{
-    width: 15%;
-    padding-right: 5vh;
+#home-container {
+  height: 100%;
+  // background-color: red;
+  display: flex;
+  flex-direction: column;
 }
 
-
-.demo-chart{
-    width: 50%;
-    float: left;
+.pie-chart-section {
+  width: 50%;
+  height: 60vh;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #f7f6f9;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.demo-chart-2{
-    width: 50%;
-    float: right;
+#entity-selection {
+  width: 50%;
+  height: inherit;
+  padding: 20px;
+  border-radius: 20px;
+  margin-left: 10px;
+  background-color: #f7f6f9;
+}
+
+.chart-title {
+  font-family: pro-regular;
+  font-weight: bold;
+  font-size: small;
+  text-align: center;
+  color: grey;
+}
+
+#home-container div:first-child {
+  margin-left: 0;
+}
+
+#count-section {
+  border-radius: 15px;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+}
+
+.box {
+  height: 100px;
+  aspect-ratio: 1 / 1;
+  border: 2px rgb(233, 231, 231) solid;
+  background-color: #f7f6f9;
+  margin-left: 20px;
+  border-radius: 15px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-title {
+  font-weight: bold;
+  font-size: large;
+  margin: 0;
+}
+
+.box-count, .box-count2 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.box-name, .box-name2 {
+  width: 100%;
+  text-align: center;
+  font-size: medium;
+  font-weight: normal;
+  color: grey;
+}
+
+h1 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+h2 {
+  margin-bottom: 10px;
+  color: grey;
+  font-size: small;
+  font-weight: normal;
 }
 
 
-
-.welcome-head{
-    display: flex;
-    justify-content:space-evenly;
+.section2 {
+  display: flex;
+  align-items: flex-start;
+  // margin-bottom: 50px;
+  height: 100%;
 }
 
-.welcome-content{
-    display: flex;
-    justify-content:space-evenly;
+.boxes-right {
+  height: 60vh;
+  width: 50%;
+  padding-right: 20px;
+  margin-left: 20px;
+  border-radius: 15px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 20px;
 }
 
-.welcome{
-    padding-top: 10%;
+.box2 {
+  cursor: pointer;
+  height: 100%;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f7f6f9;
+  transition: 0.3s;
+}
+
+.box-count2, .box-name2 {
+  transition: 0.3s;
+}
+
+.box2:hover {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  .box-count2 {
+    font-size: xxx-large;
+    color: #F7CCAC;
+    margin-bottom: 10px;
+  }
+
+  .box-name2 {
+    color: #F7CCAC;
+  }
+}
+
+.section3 {
+  display: flex;
+  align-items: flex-start;
+}
+
+.project-members {
+  background-color: #f7f6f9;
+  border-radius: 15px;
+  padding: 30px 0;
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-right: 10px;
+}
+
+.chart2 {
+  width: 100%;
+  // background-color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.gender-count {
+  background-color: #f7f6f9;
+  border-radius: 15px;
+  padding: 30px 0;
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-left: 10px;
 }
